    https://releases.llvm.org/11.0.0/docs/ReleaseNotes.html#changes-to-the-avr-target
  * Use the version suffix when calling wasm-ld => wasm-ld-13
    https://bugzilla.mozilla.org/show_bug.cgi?id=1747145
  * Fix run-clang-tidy symlink. it moved from /usr/lib/llvm-13/share/clang/run-clang-tidy
    to /usr/lib/llvm-13/bin/run-clang-tidy
    (Closes: #1001748)

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 16 Dec 2021 14:28:09 +0100

llvm-toolchain-13 (1:13.0.1~+rc1-1~exp1) experimental; urgency=medium

  * New testing release
  * Use parallel + -4 for the xz tarballs compression to make it faster
  * Add manpages for git-clang-format & run-clang-tidy
  * Add back -DLLVM_VERSION_SUFFIX=. Useless for 13 but necessary for snapshot
    Otherwise, it adds "git" to the libs

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 11 Nov 2021 22:45:25 +0100

llvm-toolchain-13 (1:13.0.0-9) unstable; urgency=medium

  * Upload to unstable (all green on exp)

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 08 Nov 2021 14:09:25 +0100

llvm-toolchain-13 (1:13.0.0-9~exp2) experimental; urgency=medium

  * patch compiler-rt build to add option to disable scudo standalone allocator
    as it is not always supported by all debian baseline arch profiles
  * add COMPILER_RT_BUILD_SCUDO_STANDALONE=OFF to armel build in debian/rules
    since the baseline armv5t arch profile is not supported

 -- Erik Maciejewski <mr.emacski@gmail.com>  Fri, 05 Nov 2021 16:38:43 -0700

llvm-toolchain-13 (1:13.0.0-9~exp1) experimental; urgency=medium

  * Merge migration to 2stage runtimes build 12 => 13
  * Adjust openmp runtime quilt patches from branch 12 for changes in upstream
    (llvmorg-13.0.0) sources

 -- Erik Maciejewski <mr.emacski@gmail.com>  Wed, 03 Nov 2021 20:03:56 -0700

llvm-toolchain-13 (1:13.0.0-8) unstable; urgency=medium

  * Disable lldb on mipsel and mips64el as it isn't supported
    See https://reviews.llvm.org/D102872
    (Closes: #997011)
