@@ -427,7 +427,8 @@ preconfigure:
 		debian/libclang-common-$(LLVM_VERSION)-dev.install \
 		debian/libomp-$(LLVM_VERSION)-dev.install \
 		debian/llvm-$(LLVM_VERSION)-dev.install \
-		debian/llvm-$(LLVM_VERSION)-linker-tools.install
+		debian/llvm-$(LLVM_VERSION)-linker-tools.install \
+		debian/llvm-$(LLVM_VERSION)-linker-tools.links
 
 	# workaround the breaks/replaces/conflicts introduced with the omp-device-info move
 	# we update the version to make it work with apt.llvm.org
