@@ -275,6 +275,8 @@ llvm-toolchain-13 (1:13.0.1~+rc1-1~exp2) experimental; urgency=medium
   * Fix run-clang-tidy symlink. it moved from /usr/lib/llvm-13/share/clang/run-clang-tidy
     to /usr/lib/llvm-13/bin/run-clang-tidy
     (Closes: #1001748)
+  * Install LLVMgold in usr/lib/bfd-plugins to help various tools to understand the
+    format (Closes: #919020)
 
  -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 16 Dec 2021 14:28:09 +0100
 
